patchbay-gui/tests/ui/layout_box_struct_literal_private.stderr
error[E0451]: fields `width`, `height`, `min_width`, `min_height`, `max_width` and `max_height` of struct `LayoutBox` are private
  --> tests/ui/layout_box_struct_literal_private.rs:5:9
   |
 4 |     let _ = LayoutBox {
   |             --------- in this type
 5 |         width: Length::Auto,
   |         ^^^^^ private field
 6 |         height: Length::Auto,
   |         ^^^^^^ private field
 7 |         min_width: None,
   |         ^^^^^^^^^ private field
 8 |         min_height: None,
   |         ^^^^^^^^^^ private field
 9 |         max_width: None,
   |         ^^^^^^^^^ private field
10 |         max_height: None,
   |         ^^^^^^^^^^ private field
